--- a/Projects/bccrypto-csharp-1.8.1/crypto/BouncyCastle_GameSparks.csproj
+++ b/Projects/bccrypto-csharp-1.8.1/crypto/BouncyCastle_GameSparks.csproj
@@ -32,6 +32,8 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <NoWarn>1591</NoWarn>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>pdbonly</DebugType>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
