--- a/Projects/GameSparks/GameSparks.csproj
+++ b/Projects/GameSparks/GameSparks.csproj
@@ -31,43 +31,25 @@
     <DefineConstants>NO_SPINWAIT_CLASS</DefineConstants>
     <DocumentationFile>bin\Release\GameSparks.XML</DocumentationFile>
     <PlatformTarget>AnyCPU</PlatformTarget>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>pdbonly</DebugType>
   </PropertyGroup>
   <PropertyGroup Condition="'$(TargetFrameworkVersion)' == 'v2.0' Or '$(TargetFrameworkVersion)' == 'v3.0' Or '$(TargetFrameworkVersion)' == 'v3.5'">
     <DefineConstants>$(DefineConstants);DOTNET_OLD</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SuperSocket.ClientEngine, Version=0.10.0.0, Culture=neutral, PublicKeyToken=ee9af13f57f00acc">
+      <HintPath>..\..\packages\SuperSocket.ClientEngine.Core.0.10.0\lib\net35-client\SuperSocket.ClientEngine.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="WebSocket4Net, Version=0.15.2.11, Culture=neutral, PublicKeyToken=eb4e154b696bf72a">
+      <HintPath>..\..\packages\WebSocket4Net.0.15.2\lib\net35\WebSocket4Net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\Properties\AssemblyInfo.cs" />
-    <Compile Include="ClientEngine\Common\ConcurrentBatchQueue.Net20.cs" />
-    <Compile Include="ClientEngine\Common\ConnectAsyncExtension.cs" />
-    <Compile Include="ClientEngine\Common\ConnectAsyncExtension.Net.cs" />
-    <Compile Include="ClientEngine\Common\ConnectAsyncExtension.Net35.cs" />
-    <Compile Include="ClientEngine\Common\DnsEndPoint.cs" />
-    <Compile Include="ClientEngine\Common\Extensions.cs" />
-    <Compile Include="ClientEngine\Common\IBatchQueue.cs" />
-    <Compile Include="ClientEngine\Common\IProxyConnector.cs" />
-    <Compile Include="ClientEngine\Common\PosList.cs" />
-    <Compile Include="ClientEngine\Common\ProxyEventArgs.cs" />
-    <Compile Include="ClientEngine\Common\SearchMarkState.cs" />
-    <Compile Include="ClientEngine\Core\AsyncTcpSession.cs" />
-    <Compile Include="ClientEngine\Core\ClientSession.cs" />
-    <Compile Include="ClientEngine\Core\ConcurrentQueue.cs" />
-    <Compile Include="ClientEngine\Core\DataEventArgs.cs" />
-    <Compile Include="ClientEngine\Core\ErrorEventArgs.cs" />
-    <Compile Include="ClientEngine\Core\IBufferSetter.cs" />
-    <Compile Include="ClientEngine\Core\IClientSession.cs" />
-    <Compile Include="ClientEngine\Core\TcpClientSession.cs" />
-    <Compile Include="ClientEngine\Protocol\ArraySegmentEx.cs" />
-    <Compile Include="ClientEngine\Protocol\ArraySegmentList.cs" />
-    <Compile Include="ClientEngine\Protocol\BinaryCommandInfo.cs" />
-    <Compile Include="ClientEngine\Protocol\CommandInfo.cs" />
-    <Compile Include="ClientEngine\Protocol\DelegateCommand.cs" />
-    <Compile Include="ClientEngine\Protocol\IClientCommandReader.cs" />
-    <Compile Include="ClientEngine\Protocol\ICommand.cs" />
-    <Compile Include="ClientEngine\Protocol\ICommandInfo.cs" />
-    <Compile Include="ClientEngine\Protocol\StringCommandInfo.cs" />
     <Compile Include="GameSparksTimer.cs" />
     <Compile Include="GameSparksWebSocket.cs" />
     <Compile Include="GameSparksUtil.cs" />
@@ -79,55 +61,14 @@
     <Compile Include="QueueReader.cs" />
     <Compile Include="QueueWriter.cs" />
 	<Compile Include="GameSparksFormUpload2.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Command\BadRequest.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Command\Binary.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Command\Close.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Command\Handshake.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Command\Ping.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Command\WebSocketCommandBase.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Command\Pong.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Command\Text.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\DataReceivedEventArgs.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Extensions.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\MessageReceivedEventArgs.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\OpCode.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\CloseStatusCodeHybi10.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\CloseStatusCodeRfc6455.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\DraftHybi00DataReader.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\DraftHybi00HandshakeReader.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\DraftHybi00Processor.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\DraftHybi10DataReader.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\DraftHybi10HandshakeReader.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\DraftHybi10Processor.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\FramePartReader\DataFramePartReader.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\FramePartReader\ExtendedLenghtReader.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\FramePartReader\FixPartReader.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\FramePartReader\IDataFramePartReader.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\FramePartReader\MaskKeyReader.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\FramePartReader\PayloadDataReader.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\HandshakeReader.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\ICloseStatusCode.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\IProtocolProcessor.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\ProtocolProcessorBase.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\ProtocolProcessorFactory.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\ReaderBase.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\Rfc6455Processor.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\Protocol\WebSocketDataFrame.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\WebSocket.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\WebSocket.Net35.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\WebSocketCommandInfo.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\WebSocketContext.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\WebSocketState.cs" />
-    <Compile Include="WebSocket4Net\WebSocket4Net\WebSocketVersion.cs" />
     <Compile Include="..\GameSparks.Shared\TlsClient.cs">
       <Link>ClientEngine\TlsClient.cs</Link>
     </Compile>
-    <Compile Include="ClientEngine\Core\SslStreamTcpSession_TLS.cs" />
-    <Compile Include="ClientEngine\Proxy\ProxyConnectorBase.cs" />
-    <Compile Include="ClientEngine\Proxy\HttpConnectProxy.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\bccrypto-csharp-1.8.1\crypto\BouncyCastle_GameSparks.csproj">
